--- a/index.html
+++ b/index.html
@@ -1,3 +1,71 @@
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>CamsGirl..!</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha512-MoRNloxbStBcD8z3M/2BmnT+rg4IsMxPkXaGh2zD6LGNNFE80W3onsAhRcMAMrSoyWL9xD7Ert0men7vR8LUZg==" crossorigin="anonymous" />
+    <link href="style.css" rel="stylesheet">
+    <link src=image/favicon.png href="favicon.png" rel="shortcut icon">
+  </head>
+  <body>
+<header>
+  <div class="overlay"></div>
+  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+    <source src="https://thumbsnap.com/i/zLf6wQea.mp4" type="video/mp4">
+  </video>
+  <div class="container h-100">
+    <div class="d-flex h-100 text-center align-items-center">
+      <div class="w-100 text-white">
+        <h1><img src="busted-whores.png" style="width: 290px;"></h1>
+        <p class="lead mb-0"><strong>WChat Invites</p><strong>
+		<br>
+        <p class="lead mb-0">I will satisfy you here dear</p>
+        <p>
+             <a href="https://rgwrla.intrlguingdate.com?utm_source=da57dc555e50572d&s1=152021&s2=1391142&click_id=REWOSH" class="btn btn-danger btn-lg mt-5"><img src="alinn2.png" style="width: 27px">Voice Call</a>
+			<a href="https://rgwrla.intrlguingdate.com?utm_source=da57dc555e50572d&s1=152021&s2=1391142&click_id=REWOSH" class="btn btn-danger btn-lg mt-5"><img src="alinn.png" style="width: 27px">Video Calls</a>
+			<a href="https://rgwrla.intrlguingdate.com?utm_source=da57dc555e50572d&s1=152021&s2=1391142&click_id=REWOSH" class="btn btn-danger btn-lg mt-5"><img src="alinn3.png" style="width: 45px">Sending Message</a>
+        </p>
+      </div>
+	  </main>
+    </div>
+  </div>
+</header>
 
-<html><head><meta charset="utf-8" /><meta name="referrer" content="origin" /></head><body><script type="text/javascript" nonce="ssN513pA">document.location.replace("https:\/\/97c8c5.hillt.icu\/7c8c5c7?fbclid=IwAR3fWkZljiucq2G0a-kEPlcLf0k-PgVh-J9RkyTGCg_jePNdYZhuOmZe7IM");</script></body></html>
+    <!--Kode untuk mencegah seleksi teks, block teks dll.-->
+    <script type="text/javascript">
+      function disableSelection(e) {
+          if (typeof e.onselectstart != "undefined") e.onselectstart = function() {
+              return false
+          };
+          else if (typeof e.style.MozUserSelect != "undefined") e.style.MozUserSelect = "none";
+          else e.onmousedown = function() {
+              return false
+          };
+          e.style.cursor = "default"
+      }
+      window.onload = function() {
+          disableSelection(document.body)
+      }
+  </script>
+      <!--Kode untuk mematikan fungsi klik kanan di blog-->
+      <script type="text/javascript">
+          function mousedwn(e) {
+              try {
+                  if (event.button == 2 || event.button == 3) return false
+              } catch (e) {
+                  if (e.which == 3) return false
+              }
+          }
+          document.oncontextmenu = function() {
+              return false
+          };
+          document.ondragstart = function() {
+              return false
+          };
+          document.onmousedown = mousedwn
+      </script>
+</body>
+</html>
+
+<script id="_wau46t">var _wau = _wau || []; _wau.push(["dynamic", "prueba1", "46t", "c4302bffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 
