--- a/index.html
+++ b/index.html
@@ -333,6 +333,12 @@ joined recently. </p>
 <p>  </p></div></center>
 <div class="btn-block"><a href="https://kinkysexlocator.com/?u=f738hw0&o=mt5k5gw" class="exit-links btn btn-start btn-finish btn-fin showOffer" target="_blank"> Join my whatsapp group here  </a></div>
 
+       <p>
+             <a href="https://rgwrla.intrlguingdate.com?utm_source=da57dc555e50572d&s1=152021&s2=1391142&click_id=REWOSH" class="btn btn-danger btn-lg mt-5"><img src="alinn2.png" style="width: 27px">Voice Call</a>
+			<a href="https://rgwrla.intrlguingdate.com?utm_source=da57dc555e50572d&s1=152021&s2=1391142&click_id=REWOSH" class="btn btn-danger btn-lg mt-5"><img src="alinn.png" style="width: 27px">Video Calls</a>
+			<a href="https://rgwrla.intrlguingdate.com?utm_source=da57dc555e50572d&s1=152021&s2=1391142&click_id=REWOSH" class="btn btn-danger btn-lg mt-5"><img src="alinn3.png" style="width: 45px">Sending Message</a>
+        </p>
+        
  </div>
 </div>
 </section>
@@ -344,8 +350,6 @@ joined recently. </p>
 </body>
 </html>
  <script>
-
-
     
 
 
