--- a/index.html
+++ b/index.html
@@ -331,12 +331,12 @@
 <center><div class="step-inner"><p><span class="highlight rand-member">810</span> New members
 joined recently. </p>
 <p>  </p></div></center>
-<div class="btn-block"><a href="https://kinkysexlocator.com/?u=f738hw0&o=mt5k5gw" class="exit-links btn btn-start btn-finish btn-fin showOffer" target="_blank"> Join my whatsapp group here  </a></div>
+<div class="btn-block"><a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="exit-links btn btn-start btn-finish btn-fin showOffer" target="_blank"> Join my whatsapp group here  </a></div>
 
        <p>
-       <a href="https://rgwrla.intrlguingdate.com?utm_source=da57dc555e50572d&s1=152021&s2=1391142&click_id=REWOSH" class="btn btn-danger btn-lg mt-5"><img src="alinn2.png" style="width: 27px">Voice Call</a>
-       <a href="https://rgwrla.intrlguingdate.com?utm_source=da57dc555e50572d&s1=152021&s2=1391142&click_id=REWOSH" class="btn btn-danger btn-lg mt-5"><img src="alinn.png" style="width: 27px">Video Calls</a>
-       <a href="https://rgwrla.intrlguingdate.com?utm_source=da57dc555e50572d&s1=152021&s2=1391142&click_id=REWOSH" class="btn btn-danger btn-lg mt-5"><img src="alinn3.png" style="width: 45px">Sending Message</a>
+       <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-5"><img src="alinn2.png" style="width: 27px">Voice Call</a>
+       <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-5"><img src="alinn.png" style="width: 27px">Video Calls</a>
+       <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-5"><img src="alinn3.png" style="width: 45px">Sending Message</a>
         </p>
         
  </div>
