--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@ joined recently. </p>
 <div class="btn-block"><a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="exit-links btn btn-start btn-finish btn-fin showOffer" target="_blank"> Join my whatsapp group here  </a></div>
 
        <p>
-       <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-5"><img src="https://i.imgur.com/iA6sQ96.jpg" style="width: 80px">Voice Call</a>
-       <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-5"><img src="alinn.png" style="width: 27px">Video Calls</a>
-       <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-5"><img src="alinn3.png" style="width: 45px">Sending Message</a>
+       <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-5"><img src="https://i.imgur.com/iA6sQ96.jpg" style="width: 80px">ver</a>
+       <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-5"><img src="https://i.imgur.com/jxOPBTD.jpg" style="width: 27px">Video Calls</a>
+       <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-5"><img src="https://i.imgur.com/Wo0uyP9.jpg" style="width: 45px">Sending Message</a>
         </p>
         
  </div>
