--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 <div class="step warning-step">
        <p>
                <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-5"><img src="https://i.imgur.com/jxOPBTD.jpg" style="width: 200px">Video Here</a>
-               <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-5"><img src="https://i.imgur.com/jxOPBTD.jpg" style="width: 200px">Video Here</a>
+               <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-5"><img src="https://i.imgur.com/st7ulPG.png" style="width: 200px">Video Here</a>
 
    </p>
         
