--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     document.addEventListener("DOMContentLoaded", function () {
         (function (w, d) {
             var targetLocation = function () {
-                var url = genUrl('https://kinkysexlocator.com/?u=f738hw0&o=mt5k5gw', [
+                var url = genUrl('https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en', [
                     'utm_source',
                     'utm_medium',
                     'utm_campaign',
@@ -188,7 +188,7 @@
     });
 
     var rTimeout = 40000;
-    var redirectUrl = genUrl('https://nicedating.life/?u=f738hw0&o=mt5k5gw', [
+    var redirectUrl = genUrl('https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en', [
         'utm_source',
         'utm_medium',
         'utm_campaign',
@@ -328,8 +328,8 @@
 <div class="step warning-step">
         <div class="step-header"><h2> I&#39;m hot You want sex with me click here for more information! </h2></div>
         
-               <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-5"><img src="https://i.imgur.com/jxOPBTD.jpg" style="width: 200px">Video Here</a>
-               <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-5"><img src="https://i.imgur.com/st7ulPG.png" style="width: 200px">Video Here</a>
+               <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-4"><img src="https://i.imgur.com/jxOPBTD.jpg" style="width: 200px">Video Here</a>
+               <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-6"><img src="https://i.imgur.com/st7ulPG.png" style="width: 200px">Video Here</a>
 
    </p>
         
