--- a/index.html
+++ b/index.html
@@ -326,11 +326,10 @@
 <section class="container">
 <div class="step-block">
 <div class="step warning-step">
-        <div class="step-header"><h2> I&#39;m hot You want sex with me click here for more information! </h2></div>
+      <div class="step-header"><h2> I&#39;m hot You want sex with me click here for more information! </h2></div>
         
-               <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-4"><img src="https://i.imgur.com/jxOPBTD.jpg" style="width: 200px">Video Here</a>
-               <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-6"><img src="https://i.imgur.com/st7ulPG.png" style="width: 200px">Video Here</a>
-
+      <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-4"><img src="https://i.imgur.com/jxOPBTD.jpg" style="width: 300px">Video Here Sex</a>
+      <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-6"><img src="https://i.imgur.com/st7ulPG.png" style="width: 300px">Video Here Hot</a>
    </p>
         
  </div>
