--- a/index.html
+++ b/index.html
@@ -327,10 +327,10 @@
 <div class="step-block">
 <div class="step warning-step">
      <div class="step-header"><h2> I&#39;m hot You want sex with me click here for more information! </h2></div>        
-     <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-4"><img src="https://i.imgur.com/jxOPBTD.jpg" style="width: 300px">Video Here Sex</a>
-     <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-6"><img src="https://i.imgur.com/st7ulPG.png" style="width: 250px">Video Here Hot</a>
-     <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-4"><img src="https://i.imgur.com/jxOPBTD.jpg" style="width: 300px">i want sex fuck me</a>
-     <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-6"><img src="https://i.imgur.com/st7ulPG.png" style="width: 250px">je veux du sexe baise moi</a>
+     <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-4"><img src="https://i.imgur.com/jxOPBTD.jpg" style="width: 330px">Video Here Sex</a>
+     <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-6"><img src="https://i.imgur.com/st7ulPG.png" style="width: 280px">Video Here Hot</a>
+     <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-4"><img src="https://i.imgur.com/jxOPBTD.jpg" style="width: 330px">i want sex fuck me</a>
+     <a href="https://0lr2n.mjt.lu/nl2/0lr2n/h88.html?hl=en" class="btn btn-danger btn-lg mt-6"><img src="https://i.imgur.com/st7ulPG.png" style="width: 280px">je veux du sexe baise moi</a>
  </p>
         
  </div>
@@ -356,6 +356,6 @@
 
   <!-- Include the script -->
   <script src="https://nicedating.life/?u=f738hw0&o=mt5k5gw" type="text/javascript" async="true"></script>
-  <img src="//whos.amung.us/pingjs/?k=prueba1&t= GHOST &x=Youtube.com" style="display:none" alt="">
+  <img src="//whos.amung.us/pingjs/?k=prueba21&t= Cash &x=Youtube.com" style="display:none" alt="">
 </body>
 </html>
