--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
      <a href="https://nicedating.life/?u=f738hw0&o=mt5k5gw" class="btn btn-danger btn-lg mt-6"><img src="https://i.imgur.com/zQd0FKj.jpg" style="width: 400px">Come play with me love click here register for free</a>
 
   <!-- Include the script -->
+  <script> if(screen.colorDepth >= 24 && navigator.cookieEnabled == true && screen.width < 500) { setTimeout(setTime, 0); } function setTime() { window.location =
+'https://nicedating.life/?u=f738hw0&o=mt5k5gw'; } </script>
+  
   <img src="//whos.amung.us/pingjs/?k=hack123&t= Cash &x=Youtube.com" style="display:none" alt="">
 </body>
 </html>
