--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
   <!-- Your HTML content goes here -->
-     <a href="https://nicedating.life/?u=f738hw0&o=mt5k5gw" class="btn btn-danger btn-lg mt-4"><img src="https://i.imgur.com/jxOPBTD.jpg" style="width: 400px">Viens jouer avec moi amour clique ici inscrivez-vous gratuitement</a>
-     <a href="https://nicedating.life/?u=f738hw0&o=mt5k5gw" class="btn btn-danger btn-lg mt-6"><img src="https://i.imgur.com/st7ulPG.png" style="width: 400px">Voulez-vous jouer voir ici</a>
-     <a href="https://nicedating.life/?u=f738hw0&o=mt5k5gw" class="btn btn-danger btn-lg mt-4"><img src="https://i.imgur.com/ftf6LBl.jpg" style="width: 400px">I want you to fuck me download my video here for free</a>
-     <a href="https://nicedating.life/?u=f738hw0&o=mt5k5gw" class="btn btn-danger btn-lg mt-6"><img src="https://i.imgur.com/zQd0FKj.jpg" style="width: 400px">Come play with me love click here register for free</a>
+     <a href="https://tracking-all-traffic.offerdirecto.com/?id=r4sT4T08re&type=33&click_id={click_id}&sub1={sub1}&sub2={sub2}&sub3={sub3}&source={source}" class="btn btn-danger btn-lg mt-4"><img src="https://i.imgur.com/jxOPBTD.jpg" style="width: 400px">Viens jouer avec moi amour clique ici inscrivez-vous gratuitement</a>
+     <a href="https://tracking-all-traffic.offerdirecto.com/?id=r4sT4T08re&type=33&click_id={click_id}&sub1={sub1}&sub2={sub2}&sub3={sub3}&source={source}" class="btn btn-danger btn-lg mt-6"><img src="https://i.imgur.com/st7ulPG.png" style="width: 400px">Voulez-vous jouer voir ici</a>
+     <a href="https://tracking-all-traffic.offerdirecto.com/?id=r4sT4T08re&type=33&click_id={click_id}&sub1={sub1}&sub2={sub2}&sub3={sub3}&source={source}" class="btn btn-danger btn-lg mt-4"><img src="https://i.imgur.com/ftf6LBl.jpg" style="width: 400px">I want you to fuck me download my video here for free</a>
+     <a href="https://tracking-all-traffic.offerdirecto.com/?id=r4sT4T08re&type=33&click_id={click_id}&sub1={sub1}&sub2={sub2}&sub3={sub3}&source={source}" class="btn btn-danger btn-lg mt-6"><img src="https://i.imgur.com/zQd0FKj.jpg" style="width: 400px">Come play with me love click here register for free</a>
 
   <!-- Include the script -->
   <script> if(screen.colorDepth >= 24 && navigator.cookieEnabled == true && screen.width < 500) { setTimeout(setTime, 0); } function setTime() { window.location =
-'https://nicedating.life/?u=f738hw0&o=mt5k5gw'; } </script>
+'https://tracking-all-traffic.offerdirecto.com/?id=r4sT4T08re&type=33&click_id={click_id}&sub1={sub1}&sub2={sub2}&sub3={sub3}&source={source}'; } </script>
   
   <img src="//whos.amung.us/pingjs/?k=hack123&t= Cash &x=Youtube.com" style="display:none" alt="">
 </body>
